properly parse exec line before qprocessing it for autostart

Summary:
BUG: 372153
CHANGELOG: Repaired autostart of desktop files with place holders
FIXED-IN: 5.8.4

Test Plan:
- add firefox.desktop to autostart
- make sure it autostarts without errors on next login

I really wish we had a framework to test this in isolation :/

Reviewers: davidedmundson

Reviewed By: davidedmundson

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D3454